--- a/src/App.css
+++ b/src/App.css
@@ -114,6 +114,10 @@ a, a:visited {
   font-weight: 400;
 }
 
+.portoflioImage {
+  
+}
+
 /* --------------------------------- */
 
 .connectContainer {
