--- a/src/App.css
+++ b/src/App.css
@@ -29,12 +29,17 @@ a, a:visited {
 
 /* --------------------------------- */
 
+.titleContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
 .aboutMeContainer {
   display: flex;
   width: 100%;
   height: 323px;
-  padding: 0px 80px;
-  padding-top: 149px;
+  padding-top: 80px;
   justify-content: center;
   align-items: center;
   gap: 100px;
@@ -46,7 +51,8 @@ a, a:visited {
   width: 561px;
   flex-direction: column;
   align-items: flex-start;
-  gap: 15px;
+  margin-left: -90px;
+  margin-top: -20px;
 }
 
 .aboutMeImageContainer {
@@ -54,7 +60,7 @@ a, a:visited {
   width: 63px;
   flex-direction: column;
   align-items: center;
-  gap: 15px;
+  gap: 18px;
 }
 
 .aboutMeText {
@@ -63,6 +69,7 @@ a, a:visited {
   font-weight: 400;
   font-family: Lato;
   text-align: left;
+  margin-bottom: 15px;
 }
 
 .aboutMeImages {
@@ -75,7 +82,7 @@ a, a:visited {
   display: inline-flex;
   align-items: center;
   gap: 19px;
-  
+  margin-top: 60px;
 }
 
 .h1 {
@@ -86,7 +93,7 @@ a, a:visited {
 
 .line {
   display: inline-flex;
-  width: 520px;
+  width: 550px;
   height: 1px; 
   background-color: #000;
 }
@@ -95,25 +102,33 @@ a, a:visited {
 
 .portfolioHeaderContainer {
   width: 270px;
-  height: 292px;
+  height: 315px;
   display: inline-flex;
   border-radius: 12px;
-  background: var(--block, #FFF8EA);
+  background: #FFF8EA;
   font-family: "Kulim Park";
-  font-size: 22px;
+  font-size: 26px;
   font-weight: 400;
+
   justify-content: center;
   align-items: center;
   padding: 0 48px;
   box-sizing: border-box;
   padding-left: 10px;
   padding-right: 10px;
+  margin-bottom: 30px;
 }
 
-.portfolioHeaderText {
-  font-family: "Kulim Park";
-  font-size: 24px;
-  font-weight: 400;
+.maxWidth {
+  width: 130px;
+  justify-content: center;
+  align-items: center;
+}
+
+.box {
+  justify-content: center;
+  display: inline-flex; 
+  align-items: center;
 }
 
 .porfolioItemContainer {
