--- a/src/App.css
+++ b/src/App.css
@@ -155,6 +155,8 @@ a, a:visited {
 
 /* --------------------------------- */
 
+/* CONNECT BUTTON */
+
 .connectContainer {
   display: flex;
   justify-content: center;
